[package]
name = "bevy_mod_gizmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_render", "bevy_asset", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = { version = "0.10" }

[features]
default = ["bevy_pbr", "bevy_sprite"]
bevy_pbr = ["bevy/bevy_pbr"]
bevy_sprite = ["bevy/bevy_sprite"]

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
